Trying to fix flickering

--- a/styles/header.module.less
+++ b/styles/header.module.less
@@ -16,6 +16,12 @@
     li:first-child {
       flex-grow: 1;
     }
+    li:nth-child(2) {
+      width: 48px;
+    }
+    li:nth-child(3) {
+      width: 56px;
+    }
   }
 }
 
